--- a/index.html
+++ b/index.html
@@ -48,12 +48,22 @@
             padding: 15px;
             border-radius: 10px;
             margin-bottom: 20px;
-            text-align: center;
+        }
+
+        .mode-row {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            margin-bottom: 15px;
+        }
+
+        .mode-row:last-child {
+            margin-bottom: 0;
         }
 
         .mode-selector label {
-            margin-right: 10px;
             font-weight: 500;
+            min-width: 100px;
         }
 
         .mode-selector select {
@@ -66,14 +76,50 @@
             cursor: pointer;
         }
 
-        .vu-meters {
+        .status {
+            display: inline-block;
+            padding: 8px 16px;
+            border-radius: 20px;
+            font-weight: 500;
+            font-size: 0.9em;
+        }
+
+        .status.connected {
+            background: rgba(68, 255, 68, 0.2);
+            color: #44ff44;
+            border: 1px solid #44ff44;
+        }
+
+        .status.disconnected {
+            background: rgba(255, 68, 68, 0.2);
+            color: #ff4444;
+            border: 1px solid #ff4444;
+        }
+
+        .status.connecting {
+            background: rgba(255, 200, 68, 0.2);
+            color: #ffc844;
+            border: 1px solid #ffc844;
+        }
+
+        .main-layout {
             display: flex;
             gap: 20px;
             margin-bottom: 30px;
         }
 
-        .vu-meter-container {
+        .left-panel {
             flex: 1;
+        }
+
+        .right-panel {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+
+        .vu-meter-container {
             background: rgba(0, 0, 0, 0.3);
             padding: 20px;
             border-radius: 15px;
@@ -87,14 +133,7 @@
             margin-bottom: 15px;
             text-transform: uppercase;
             letter-spacing: 2px;
-        }
-
-        .meter-label.sell {
-            color: #ff4444;
-        }
-
-        .meter-label.buy {
-            color: #44ff44;
+            color: #00ff88;
         }
 
         canvas {
@@ -103,11 +142,131 @@
             border-radius: 10px;
         }
 
+        .playback-controls {
+            background: rgba(0, 0, 0, 0.3);
+            padding: 20px;
+            border-radius: 10px;
+        }
+
+        .button-group {
+            display: flex;
+            gap: 10px;
+            margin-bottom: 15px;
+        }
+
+        button {
+            padding: 12px 24px;
+            background: #00ff88;
+            color: #000;
+            border: none;
+            border-radius: 8px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.2s;
+            font-size: 1em;
+        }
+
+        button:hover {
+            background: #00cc6a;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(0, 255, 136, 0.3);
+        }
+
+        button:active {
+            transform: translateY(0);
+        }
+
+        button:disabled {
+            background: #333;
+            color: #666;
+            cursor: not-allowed;
+            transform: none;
+        }
+
+        button.reset {
+            background: #ff4444;
+            font-size: 0.9em;
+            padding: 8px 16px;
+        }
+
+        button.reset:hover {
+            background: #cc0000;
+        }
+
+        button.reconnect {
+            padding: 6px 12px;
+            font-size: 0.9em;
+        }
+
+        input[type="file"] {
+            padding: 10px;
+            background: #2a2a2a;
+            color: #fff;
+            border: 1px solid #444;
+            border-radius: 5px;
+            cursor: pointer;
+            width: 100%;
+        }
+
+        .stats {
+            background: rgba(0, 0, 0, 0.3);
+            padding: 20px;
+            border-radius: 10px;
+            flex: 1;
+        }
+
+        .stats-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 15px;
+        }
+
+        .stats-header h3 {
+            margin: 0;
+            color: #00ff88;
+        }
+
+        .stats-grid {
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 12px;
+        }
+
+        .stat-box {
+            background: rgba(255, 255, 255, 0.05);
+            padding: 12px 15px;
+            border-radius: 8px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .stat-label {
+            font-size: 0.85em;
+            color: #888;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .stat-value {
+            font-size: 1.4em;
+            font-weight: 600;
+            color: #00ff88;
+        }
+
+        .stat-value.sell {
+            color: #ff4444;
+        }
+
+        .stat-value.buy {
+            color: #44ff44;
+        }
+
         .controls {
             background: rgba(255, 255, 255, 0.05);
             padding: 25px;
             border-radius: 15px;
-            margin-bottom: 20px;
         }
 
         .control-group {
@@ -160,129 +319,6 @@
             color: #00ff88;
             font-weight: 500;
         }
-
-        .websocket-status {
-            background: rgba(0, 0, 0, 0.3);
-            padding: 20px;
-            border-radius: 10px;
-            margin-bottom: 20px;
-        }
-
-        .status {
-            display: inline-block;
-            padding: 8px 16px;
-            border-radius: 20px;
-            font-weight: 500;
-            font-size: 0.9em;
-        }
-
-        .status.connected {
-            background: rgba(68, 255, 68, 0.2);
-            color: #44ff44;
-            border: 1px solid #44ff44;
-        }
-
-        .status.disconnected {
-            background: rgba(255, 68, 68, 0.2);
-            color: #ff4444;
-            border: 1px solid #ff4444;
-        }
-
-        .status.connecting {
-            background: rgba(255, 200, 68, 0.2);
-            color: #ffc844;
-            border: 1px solid #ffc844;
-        }
-
-        .playback-controls {
-            background: rgba(0, 0, 0, 0.3);
-            padding: 20px;
-            border-radius: 10px;
-            margin-bottom: 20px;
-        }
-
-        .button-group {
-            display: flex;
-            gap: 10px;
-            margin-bottom: 15px;
-        }
-
-        button {
-            padding: 12px 24px;
-            background: #00ff88;
-            color: #000;
-            border: none;
-            border-radius: 8px;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.2s;
-            font-size: 1em;
-        }
-
-        button:hover {
-            background: #00cc6a;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(0, 255, 136, 0.3);
-        }
-
-        button:active {
-            transform: translateY(0);
-        }
-
-        button:disabled {
-            background: #333;
-            color: #666;
-            cursor: not-allowed;
-            transform: none;
-        }
-
-        input[type="file"] {
-            padding: 10px;
-            background: #2a2a2a;
-            color: #fff;
-            border: 1px solid #444;
-            border-radius: 5px;
-            cursor: pointer;
-            width: 100%;
-        }
-
-        .stats {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 15px;
-            background: rgba(0, 0, 0, 0.3);
-            padding: 20px;
-            border-radius: 10px;
-        }
-
-        .stat-box {
-            background: rgba(255, 255, 255, 0.05);
-            padding: 15px;
-            border-radius: 8px;
-            text-align: center;
-        }
-
-        .stat-label {
-            font-size: 0.8em;
-            color: #888;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            margin-bottom: 5px;
-        }
-
-        .stat-value {
-            font-size: 1.8em;
-            font-weight: 600;
-            color: #00ff88;
-        }
-
-        .stat-value.sell {
-            color: #ff4444;
-        }
-
-        .stat-value.buy {
-            color: #44ff44;
-        }
     </style>
 </head>
 <body>
@@ -292,48 +328,81 @@
             <div class="subtitle">Real-time Order Flow Audio Visualization</div>
         </header>
 
-        <!-- Mode Selector -->
+        <!-- Mode Selector with Connection -->
         <div class="mode-selector">
-            <label for="data-mode">Data Source:</label>
-            <select id="data-mode">
-                <option value="websocket">Live (WebSocket from DTC Client)</option>
-                <option value="playback">Playback (CSV File)</option>
-            </select>
-        </div>
-
-        <!-- WebSocket Status -->
-        <div id="websocket-status" class="websocket-status">
-            <strong>Connection Status:</strong>
-            <span id="connection-status" class="status disconnected">Disconnected</span>
-            <button id="reconnect-btn" style="margin-left: 15px; padding: 6px 12px; font-size: 0.9em;">Reconnect</button>
-        </div>
-
-        <!-- Playback Controls -->
-        <div id="playback-controls" class="playback-controls" style="display: none;">
-            <h3 style="margin-bottom: 15px;">CSV Playback</h3>
-            <div class="control-group">
-                <label for="csv-file">Load CSV File:</label>
-                <input type="file" id="csv-file" accept=".csv">
+            <div class="mode-row">
+                <label for="data-mode">Data Source:</label>
+                <select id="data-mode">
+                    <option value="websocket">Live</option>
+                    <option value="playback">Playback (CSV File)</option>
+                </select>
             </div>
-            <div class="button-group">
-                <button id="play-btn">▶ Play</button>
-                <button id="pause-btn">⏸ Pause</button>
-                <button id="stop-btn">⏹ Stop</button>
-            </div>
-            <div class="control-group">
-                <label for="playback-speed">Playback Speed: <span id="speed-value" class="value-display">1.0x</span></label>
-                <input type="range" id="playback-speed" min="0.1" max="5" step="0.1" value="1">
+            <div id="websocket-status" class="mode-row">
+                <label>Status:</label>
+                <span id="connection-status" class="status disconnected">Disconnected</span>
+                <button id="reconnect-btn" class="reconnect">Reconnect</button>
             </div>
         </div>
 
-        <!-- VU Meters -->
-        <div class="vu-meters">
-            <div class="vu-meter-container">
-                <div class="meter-label sell">◀ SELL / BID</div>
-                <canvas id="vu-meter-canvas"></canvas>
+        <!-- Main Layout -->
+        <div class="main-layout">
+            <!-- Left Panel: Tick Meter -->
+            <div class="left-panel">
+                <div class="vu-meter-container">
+                    <div class="meter-label">📊 Tick Meter</div>
+                    <canvas id="vu-meter-canvas"></canvas>
+                </div>
             </div>
-            <div class="vu-meter-container">
-                <div class="meter-label buy">BUY / ASK ▶</div>
+
+            <!-- Right Panel: Playback + Stats -->
+            <div class="right-panel">
+                <!-- Playback Controls -->
+                <div id="playback-controls" class="playback-controls" style="display: none;">
+                    <h3 style="margin-bottom: 15px;">CSV Playback</h3>
+                    <div class="control-group">
+                        <label for="csv-file">Load CSV File:</label>
+                        <input type="file" id="csv-file" accept=".csv">
+                    </div>
+                    <div class="button-group">
+                        <button id="play-btn">▶ Play</button>
+                        <button id="pause-btn">⏸ Pause</button>
+                        <button id="stop-btn">⏹ Stop</button>
+                    </div>
+                    <div class="control-group">
+                        <label for="playback-speed">Playback Speed: <span id="speed-value" class="value-display">1.0x</span></label>
+                        <input type="range" id="playback-speed" min="0.1" max="5" step="0.1" value="1">
+                    </div>
+                </div>
+
+                <!-- Stats -->
+                <div class="stats">
+                    <div class="stats-header">
+                        <h3>Statistics</h3>
+                        <button id="reset-stats-btn" class="reset">Reset</button>
+                    </div>
+                    <div class="stats-grid">
+                        <div class="stat-box">
+                            <div class="stat-label">Sell Trades</div>
+                            <div class="stat-value sell" id="sell-count">0</div>
+                        </div>
+                        <div class="stat-box">
+                            <div class="stat-label">Buy Trades</div>
+                            <div class="stat-value buy" id="buy-count">0</div>
+                        </div>
+                        <div class="stat-box">
+                            <div class="stat-label">Sell Volume</div>
+                            <div class="stat-value sell" id="sell-volume">0</div>
+                        </div>
+                        <div class="stat-box">
+                            <div class="stat-label">Buy Volume</div>
+                            <div class="stat-value buy" id="buy-volume">0</div>
+                        </div>
+                        <div class="stat-box">
+                            <div class="stat-label">Events/Second</div>
+                            <div class="stat-value" id="events-per-sec">0.0</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -343,41 +412,22 @@
             
             <div class="control-group">
                 <label for="master-volume">Master Volume: <span id="volume-value" class="value-display">70%</span></label>
-                <input type="range" id="master-volume" min="0" max="100" value="70">
+                <input type="range" id="master-volume" min="0" max="200" value="70">
             </div>
 
             <div class="control-group">
-                <label for="frequency">Tone Frequency: <span id="frequency-value" class="value-display">3380 Hz</span></label>
-                <input type="range" id="frequency" min="1000" max="5000" step="10" value="3380">
+                <label for="bid-frequency">BID Frequency: <span id="bid-freq-value" class="value-display">100 Hz</span></label>
+                <input type="range" id="bid-frequency" min="0" max="2000" step="10" value="100">
+            </div>
+
+            <div class="control-group">
+                <label for="ask-frequency">ASK Frequency: <span id="ask-freq-value" class="value-display">1000 Hz</span></label>
+                <input type="range" id="ask-frequency" min="0" max="2000" step="10" value="1000">
             </div>
 
             <div class="control-group">
                 <label for="sensitivity">Meter Sensitivity: <span id="sensitivity-value" class="value-display">100%</span></label>
                 <input type="range" id="sensitivity" min="0" max="100" value="100">
-            </div>
-        </div>
-
-        <!-- Stats -->
-        <div class="stats">
-            <div class="stat-box">
-                <div class="stat-label">Sell Trades</div>
-                <div class="stat-value sell" id="sell-count">0</div>
-            </div>
-            <div class="stat-box">
-                <div class="stat-label">Buy Trades</div>
-                <div class="stat-value buy" id="buy-count">0</div>
-            </div>
-            <div class="stat-box">
-                <div class="stat-label">Sell Volume</div>
-                <div class="stat-value sell" id="sell-volume">0</div>
-            </div>
-            <div class="stat-box">
-                <div class="stat-label">Buy Volume</div>
-                <div class="stat-value buy" id="buy-volume">0</div>
-            </div>
-            <div class="stat-box">
-                <div class="stat-label">Events/Second</div>
-                <div class="stat-value" id="events-per-sec">0.0</div>
             </div>
         </div>
     </div>
