--- a/index.html
+++ b/index.html
@@ -435,6 +435,7 @@
     <script src="audio-engine.js"></script>
     <script src="vu-meter.js"></script>
     <script src="data-player.js"></script>
+    <script src="event-engine.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
