--- a/index.html
+++ b/index.html
@@ -4,505 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TradeFlow Audio Monitor</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      body {
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        background: linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%);
-        color: #ffffff;
-        padding: 20px;
-        min-height: 100vh;
-      }
-
-      .container {
-        max-width: 1200px;
-        margin: 0 auto;
-      }
-
-      header {
-        text-align: center;
-        margin-bottom: 30px;
-      }
-
-      h1 {
-        font-size: 2.5em;
-        font-weight: 300;
-        letter-spacing: 2px;
-        color: #00ff88;
-        text-shadow: 0 0 20px rgba(0, 255, 136, 0.3);
-      }
-
-      .subtitle {
-        color: #888;
-        margin-top: 5px;
-        font-size: 0.9em;
-      }
-
-      .mode-selector {
-        background: rgba(255, 255, 255, 0.05);
-        padding: 15px;
-        border-radius: 10px;
-        margin-bottom: 20px;
-      }
-
-      .mode-row {
-        display: flex;
-        align-items: center;
-        gap: 15px;
-        margin-bottom: 15px;
-      }
-
-      .mode-row:last-child {
-        margin-bottom: 0;
-      }
-
-      .mode-selector label {
-        font-weight: 500;
-        min-width: 100px;
-      }
-
-      .mode-selector select {
-        padding: 8px 15px;
-        background: #2a2a2a;
-        color: #fff;
-        border: 1px solid #444;
-        border-radius: 5px;
-        font-size: 1em;
-        cursor: pointer;
-      }
-
-      .status {
-        display: inline-block;
-        padding: 8px 16px;
-        border-radius: 20px;
-        font-weight: 500;
-        font-size: 0.9em;
-      }
-
-      .status.connected {
-        background: rgba(68, 255, 68, 0.2);
-        color: #44ff44;
-        border: 1px solid #44ff44;
-      }
-
-      .status.disconnected {
-        background: rgba(255, 68, 68, 0.2);
-        color: #ff4444;
-        border: 1px solid #ff4444;
-      }
-
-      .status.connecting {
-        background: rgba(255, 200, 68, 0.2);
-        color: #ffc844;
-        border: 1px solid #ffc844;
-      }
-
-      .main-layout {
-        display: flex;
-        gap: 20px;
-        margin-bottom: 30px;
-      }
-
-      .left-panel {
-        flex: 1;
-      }
-
-      .right-panel {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-      }
-
-      .vu-meter-container {
-        background: rgba(0, 0, 0, 0.3);
-        padding: 20px;
-        border-radius: 15px;
-        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
-      }
-
-      .meter-label {
-        text-align: center;
-        font-size: 1.2em;
-        font-weight: 500;
-        margin-bottom: 15px;
-        text-transform: uppercase;
-        letter-spacing: 2px;
-        color: #00ff88;
-      }
-
-      canvas {
-        width: 100%;
-        height: 300px;
-        border-radius: 10px;
-      }
-
-      .playback-controls {
-        background: rgba(0, 0, 0, 0.3);
-        padding: 20px;
-        border-radius: 10px;
-      }
-
-      .button-group {
-        display: flex;
-        gap: 10px;
-        margin-bottom: 15px;
-      }
-
-      button {
-        padding: 12px 24px;
-        background: #00ff88;
-        color: #000;
-        border: none;
-        border-radius: 8px;
-        font-weight: 600;
-        cursor: pointer;
-        transition: all 0.2s;
-        font-size: 1em;
-      }
-
-      button:hover {
-        background: #00cc6a;
-        transform: translateY(-2px);
-        box-shadow: 0 4px 12px rgba(0, 255, 136, 0.3);
-      }
-
-      button:active {
-        transform: translateY(0);
-      }
-
-      button:disabled {
-        background: #333;
-        color: #666;
-        cursor: not-allowed;
-        transform: none;
-      }
-
-      button.reset {
-        background: #ff4444;
-        font-size: 0.9em;
-        padding: 8px 16px;
-      }
-
-      button.reset:hover {
-        background: #cc0000;
-      }
-
-      button.reconnect {
-        padding: 6px 12px;
-        font-size: 0.9em;
-      }
-
-      input[type="file"] {
-        padding: 10px;
-        background: #2a2a2a;
-        color: #fff;
-        border: 1px solid #444;
-        border-radius: 5px;
-        cursor: pointer;
-        width: 100%;
-      }
-
-      .stats {
-        background: rgba(0, 0, 0, 0.3);
-        padding: 20px;
-        border-radius: 10px;
-        flex: 1;
-      }
-
-      .stats-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 15px;
-      }
-
-      .stats-header h3 {
-        margin: 0;
-        color: #00ff88;
-      }
-
-      .stats-grid {
-        display: grid;
-        grid-template-columns: 1fr;
-        gap: 12px;
-      }
-
-      .stat-box {
-        background: rgba(255, 255, 255, 0.05);
-        padding: 12px 15px;
-        border-radius: 8px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-      }
-
-      .stat-label {
-        font-size: 0.85em;
-        color: #888;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-      }
-
-      .stat-value {
-        font-size: 1.4em;
-        font-weight: 600;
-        color: #00ff88;
-      }
-
-      .stat-value.sell {
-        color: #ff4444;
-      }
-
-      .stat-value.buy {
-        color: #44ff44;
-      }
-
-      .controls {
-        background: rgba(255, 255, 255, 0.05);
-        padding: 25px;
-        border-radius: 15px;
-      }
-
-      .control-group {
-        margin-bottom: 20px;
-      }
-
-      .control-group:last-child {
-        margin-bottom: 0;
-      }
-
-      .control-group label {
-        display: block;
-        margin-bottom: 8px;
-        font-weight: 500;
-        color: #aaa;
-      }
-
-      input[type="range"] {
-        width: 100%;
-        height: 6px;
-        background: #333;
-        border-radius: 3px;
-        outline: none;
-        -webkit-appearance: none;
-      }
-
-      input[type="range"]::-webkit-slider-thumb {
-        -webkit-appearance: none;
-        width: 20px;
-        height: 20px;
-        background: #00ff88;
-        border-radius: 50%;
-        cursor: pointer;
-        box-shadow: 0 0 10px rgba(0, 255, 136, 0.5);
-      }
-
-      input[type="range"]::-moz-range-thumb {
-        width: 20px;
-        height: 20px;
-        background: #00ff88;
-        border-radius: 50%;
-        cursor: pointer;
-        border: none;
-      }
-
-      .value-display {
-        display: inline-block;
-        min-width: 60px;
-        text-align: right;
-        color: #00ff88;
-        font-weight: 500;
-      }
-      /* Settings drawer */
-      .overlay {
-        position: fixed;
-        inset: 0;
-        background: rgba(0, 0, 0, 0.55);
-        z-index: 999;
-      }
-
-      .drawer {
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 420px;
-        max-width: 90vw;
-        height: 100vh;
-        background: #1f1f1f;
-        border-left: 1px solid #333;
-        box-shadow: -10px 0 30px rgba(0, 0, 0, 0.4);
-        transform: translateX(100%);
-        transition: transform 0.2s ease;
-        z-index: 1000;
-        display: flex;
-        flex-direction: column;
-        padding: 16px;
-      }
-
-      .drawer.open {
-        transform: translateX(0);
-      }
-
-      .drawer-header {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        gap: 12px;
-        padding-bottom: 12px;
-        border-bottom: 1px solid #333;
-      }
-
-      .drawer-header h3 {
-        margin: 0;
-        color: #00ff88;
-      }
-
-      .drawer-close {
-        padding: 8px 12px;
-        background: #2a2a2a;
-        color: #fff;
-        border: 1px solid #444;
-        border-radius: 8px;
-        cursor: pointer;
-      }
-
-      .drawer-body {
-        overflow: auto;
-        padding: 12px 0;
-        flex: 1;
-      }
-
-      .drawer-section {
-        background: rgba(255, 255, 255, 0.04);
-        border: 1px solid rgba(255, 255, 255, 0.06);
-        border-radius: 12px;
-        padding: 12px;
-        margin-bottom: 12px;
-      }
-
-      .drawer-section h4 {
-        margin: 0 0 10px 0;
-        color: #aaa;
-        font-weight: 600;
-        font-size: 0.95em;
-      }
-
-      .drawer-row {
-        display: grid;
-        grid-template-columns: 1fr 160px;
-        gap: 12px;
-        align-items: center;
-        margin-bottom: 10px;
-      }
-
-      .drawer-row label {
-        color: #aaa;
-        font-size: 0.9em;
-      }
-
-      .drawer-row input,
-      .drawer-row select {
-        width: 100%;
-        padding: 8px 10px;
-        background: #2a2a2a;
-        color: #fff;
-        border: 1px solid #444;
-        border-radius: 8px;
-      }
-
-      .drawer-footer {
-        padding-top: 12px;
-        border-top: 1px solid #333;
-        display: flex;
-        gap: 10px;
-        justify-content: flex-end;
-      }
-      .stats-table {
-        width: 100%;
-        border-collapse: collapse;
-        margin-top: 6px;
-      }
-
-      .stats-table thead th {
-        text-align: left;
-        font-size: 0.85em;
-        color: #888;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        padding: 10px 10px;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.08);
-      }
-
-      .stats-table tbody th {
-        text-align: left;
-        font-size: 0.85em;
-        color: #888;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        padding: 12px 10px;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.06);
-        font-weight: 500;
-      }
-
-      .stats-table tbody td {
-        padding: 12px 10px;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.06);
-      }
-
-      .stats-table tbody tr:last-child th,
-      .stats-table tbody tr:last-child td {
-        border-bottom: none;
-      }
-
-      /* Tighten slider spacing inside the drawer */
-      .drawer .control-group {
-        margin-bottom: 14px;
-      }
-
-      .drawer .control-group label {
-        margin-bottom: 6px;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
       <header>
         <h1>TradeFlow Audio Monitor</h1>
-        <div class="subtitle">Real-time Order Flow Audio Visualization</div>
+        <p class="subtitle">Real-time order flow sonification</p>
       </header>
 
-      <!-- Mode Selector with Connection -->
+      <!-- Mode Selector -->
       <div class="mode-selector">
         <div class="mode-row">
-          <label for="data-mode">Data Source:</label>
+          <label for="data-mode">Data Source</label>
           <select id="data-mode">
-            <option value="websocket">Live</option>
-            <option value="playback">Playback (CSV File)</option>
+            <option value="websocket">Live (WebSocket)</option>
+            <option value="playback">CSV Playback</option>
           </select>
+
+          <div id="websocket-status" style="display: flex; align-items: center; gap: 10px">
+            <span id="connection-status" class="status disconnected">Disconnected</span>
+            <button id="reconnect-btn" class="reconnect">Reconnect</button>
+          </div>
         </div>
 
-        <div id="websocket-status" class="mode-row">
-          <label>Status:</label>
-          <span id="connection-status" class="status disconnected"
-            >Disconnected</span
-          >
-          <button id="reconnect-btn" class="reconnect">Reconnect</button>
-          <button id="open-settings-btn" class="reconnect">Settings</button>
+        <div class="mode-row">
+          <label for="audio-alert-mode">Audio Mode</label>
+          <select id="audio-alert-mode">
+            <option value="raw">Raw (every trade)</option>
+            <option value="intelligent">Intelligent (filtered)</option>
+            <option value="transition">Transition Detection</option>
+          </select>
+          <button id="open-settings-btn">⚙ Settings</button>
         </div>
       </div>
 
       <!-- Main Layout -->
       <div class="main-layout">
-        <!-- Left Panel: Tick Meter -->
+        <!-- Left Panel: VU Meter -->
         <div class="left-panel">
           <div class="vu-meter-container">
-            <div class="meter-label">Tick Meter</div>
+            <div class="meter-label">Audio Level Monitor</div>
             <canvas id="vu-meter-canvas"></canvas>
           </div>
         </div>
@@ -608,7 +150,7 @@
               </tbody>
             </table>
 
-            <!-- Keep this for your current app.js which still updates #events-per-sec -->
+            <!-- Keep this for compatibility -->
             <span id="events-per-sec" style="display: none">0.0</span>
           </div>
         </div>
@@ -625,18 +167,7 @@
       </div>
 
       <div class="drawer-body">
-        <div class="drawer-section">
-          <h4>Audio Mode</h4>
-          <div class="drawer-row">
-            <label for="audio-alert-mode">Alert Mode</label>
-            <select id="audio-alert-mode">
-              <option value="raw">Raw (every trade)</option>
-              <option value="intelligent">Intelligent (filtered)</option>
-            </select>
-          </div>
-        </div>
-
-        <!-- Audio Settings moved here -->
+        <!-- Audio Settings (always visible) -->
         <div class="drawer-section">
           <h4>Audio Settings</h4>
 
@@ -699,7 +230,8 @@
           </div>
         </div>
 
-        <div class="drawer-section">
+        <!-- Intelligent Mode Settings -->
+        <div id="intelligent-settings" class="drawer-section settings-section">
           <h4>Intelligent Mode Settings</h4>
 
           <div class="drawer-row">
@@ -808,6 +340,127 @@
             />
           </div>
         </div>
+
+        <!-- Transition Detection Settings -->
+        <div id="transition-settings" class="drawer-section settings-section">
+          <h4>Transition Detection Settings</h4>
+
+          <div class="drawer-row">
+            <label for="transition-windowMs">Window (ms)</label>
+            <input
+              id="transition-windowMs"
+              type="number"
+              min="100"
+              max="3000"
+              step="100"
+              value="1000"
+            />
+          </div>
+
+          <div class="drawer-row">
+            <label for="transition-dominanceMetric">Dominance Metric</label>
+            <select id="transition-dominanceMetric">
+              <option value="volume">Volume</option>
+              <option value="count">Trade Count</option>
+            </select>
+          </div>
+
+          <div class="drawer-row">
+            <label for="transition-thrustThreshold">Thrust Threshold</label>
+            <input
+              id="transition-thrustThreshold"
+              type="number"
+              min="0.50"
+              max="0.95"
+              step="0.05"
+              value="0.60"
+            />
+          </div>
+
+          <div class="drawer-row">
+            <label for="transition-thrustChange">Thrust Change</label>
+            <input
+              id="transition-thrustChange"
+              type="number"
+              min="0.10"
+              max="0.70"
+              step="0.05"
+              value="0.30"
+            />
+          </div>
+
+          <div class="drawer-row">
+            <label for="transition-thrustMinVelocity">Min Velocity</label>
+            <input
+              id="transition-thrustMinVelocity"
+              type="number"
+              min="5"
+              max="100"
+              step="5"
+              value="20"
+            />
+          </div>
+
+          <div class="drawer-row">
+            <label for="transition-pullbackThreshold">Pullback Threshold</label>
+            <input
+              id="transition-pullbackThreshold"
+              type="number"
+              min="0.10"
+              max="0.70"
+              step="0.05"
+              value="0.30"
+            />
+          </div>
+
+          <div class="drawer-row">
+            <label for="transition-pullbackFade">Pullback Fade</label>
+            <input
+              id="transition-pullbackFade"
+              type="number"
+              min="0.05"
+              max="0.50"
+              step="0.05"
+              value="0.20"
+            />
+          </div>
+
+          <div class="drawer-row">
+            <label for="transition-absorptionThreshold">Absorption Threshold</label>
+            <input
+              id="transition-absorptionThreshold"
+              type="number"
+              min="0.05"
+              max="0.50"
+              step="0.05"
+              value="0.20"
+            />
+          </div>
+
+          <div class="drawer-row">
+            <label for="transition-minEventInterval">Min Event Interval (ms)</label>
+            <input
+              id="transition-minEventInterval"
+              type="number"
+              min="100"
+              max="2000"
+              step="100"
+              value="500"
+            />
+          </div>
+
+          <div class="drawer-row" style="margin-bottom: 0">
+            <label for="transition-historyDepth">History Depth (sec)</label>
+            <input
+              id="transition-historyDepth"
+              type="number"
+              min="1"
+              max="10"
+              step="1"
+              value="3"
+            />
+          </div>
+        </div>
       </div>
 
       <div class="drawer-footer">
@@ -820,6 +473,7 @@
     <script src="vu-meter.js"></script>
     <script src="data-player.js"></script>
     <script src="event-engine.js"></script>
+    <script src="transition-detection-engine.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
