--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <header>
-        <h1>🎵 TradeFlow Audio Monitor</h1>
+        <h1>TradeFlow Audio Monitor</h1>
         <p class="subtitle">Real-time order flow sonification</p>
       </header>
 
