--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TradeFlow Audio Monitor</title>
+    <title>TradeFlow Monitor</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
       <header>
-        <h1>TradeFlow Audio Monitor</h1>
+        <h1>TradeFlow Monitor</h1>
         <p class="subtitle">Real-time order flow sonification</p>
       </header>
 
@@ -46,12 +46,12 @@
         <!-- Left Panel: VU Meter -->
         <div class="left-panel">
           <div class="vu-meter-container">
-            <div class="meter-label">Audio Level Monitor</div>
+            <div class="meter-label">TradeFlow Monitor</div>
             <canvas id="vu-meter-canvas"></canvas>
           </div>
 
           <div class="imbalance-meter-wrap">
-            <div class="imbalance-meter-label">Vol/sec Imbalance</div>
+            <div class="imbalance-meter-label">Vol/Sec Imbalance</div>
             <canvas id="imbalance-meter"></canvas>
           </div>
         </div>
