Added manual connect/disconnect

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
           </select>
 
           <div id="websocket-status" style="display: flex; align-items: center; gap: 10px">
-            <span id="connection-status" class="status disconnected">Disconnected</span>
-            <button id="reconnect-btn" class="reconnect">Reconnect</button>
+            <button id="reconnect-btn" class="connect-btn">
+              <span class="conn-dot disconnected"></span>
+              <span class="conn-label">Connect</span>
+            </button>
+
           </div>
         </div>
 
