--- a/index.html
+++ b/index.html
@@ -136,6 +136,16 @@
                 </tr>
 
                 <tr>
+                  <th scope="row">Vol / Trade</th>
+                  <td>
+                    <span class="stat-value sell" id="sell-vol-per-trade">0.0</span>
+                  </td>
+                  <td>
+                    <span class="stat-value buy" id="buy-vol-per-trade">0.0</span>
+                  </td>
+                </tr>
+
+                <tr>
                   <th scope="row">Trades / Second</th>
                   <td>
                     <span class="stat-value sell" id="sell-trades-per-sec"
